plugins {
	id 'java'
    id 'java-library'
    id 'jacoco'
    id "org.sonarqube" version "6.2.0.5505"
    id 'signing'
	id 'maven-publish'
}

group = 'io.github.sandydunlop'
version = '0.1.6'

repositories {
	mavenCentral()
}

dependencies {
	implementation(localGroovy())
	testImplementation(platform('org.junit:junit-bom:5.13.3'))
    testImplementation 'org.junit.jupiter:junit-jupiter:5.13.4'
    testImplementation 'org.mockito:mockito-core:5.18.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.18.0'
	testRuntimeOnly('org.junit.platform:junit-platform-launcher')
}

java {
    withJavadocJar()
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_24
    targetCompatibility = JavaVersion.VERSION_24
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

tasks.withType(JavaCompile) {
    options.annotationProcessorPath = configurations.annotationProcessor
}

test {
	useJUnitPlatform()
	testLogging {
		events "passed", "skipped", "failed"
	}
    finalizedBy jacocoTestReport // report is always generated after tests run
}

jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
}

jacoco {
    toolVersion = "0.8.13"
}

sonar {
  properties {
    property "sonar.projectKey", "sandydunlop_markista"
    property "sonar.organization", "sandydunlop"
    property "sonar.host.url", "https://sonarcloud.io"
  }
}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = true 
    }
}

def user = ["whoami"].execute().text.trim()
jar {
    manifest {
        attributes( 'Main-Class': 'io.github.sandydunlop.markista.doclet.MarkdownDoclet',
                    'Implementation-Title': 'Markista',
                    'Implementation-Version': version,
                    'Implementation-Vendor': group,
                    'Automatic-Module-Name': 'io.github.sandydunlop.markista',
                    'Built-By': "${user}",
                    'Built-Date': new Date())
    }
}

jar.doLast {
    ant.checksum file: archivePath
    // ant.checksum file: archiveFile
}

signing {
    sign publishing.publications
}

// configure the maven publication
publishing {
    publications {
        myPub(MavenPublication) {
            from components.java
            pom {
                name = 'Markista'
                description = 'A Javadoc Doclet that produces markdown formatted documentation rather than HTML.'
                url = 'https://sandydunlop.github.io/markista'
                licenses {
                    license {
                        name = 'GPLv3'
                        url = 'https://www.gnu.org/licenses/gpl-3.0.html'
                    }
                }
                developers {
                    developer {
                        id = 'sandydunlop'
                        name = 'Sandy Dunlop'
                        email = 'sandy.dunlop@gmail.com'
                    }
                }
                scm {
                    connection = 'scm:git:git://github.com/sandydunlop/markista.git'
                    developerConnection = 'scm:git:ssh://github.com:sandydunlop/markista.git'
                    url = 'https://github.com/sandydunlop/markista'
                }
            }
        }
    }

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
        maven {
            name = "LocalMavenWithChecksums"
            url = uri(layout.buildDirectory.dir("staging-deploy"))
        }
    }
}

task website (type: Copy) {
    duplicatesStrategy = 'include'
    from '../README.md'
    into '../../../../website/docs/markista'
    rename ('README.md','index.md')
}
task copyDocs(type: Copy) {
    duplicatesStrategy = 'include'
    from 'build/md-docs'
    into '../../../../website/docs/markista/javadoc'
}
website.dependsOn copyDocs
